카카오맵 표

--- a/view/package.json
+++ b/view/package.json
@@ -53,6 +53,9 @@
           "endOfLine": "auto"
         }
       ]
+    },
+    "globals": {
+      "kakao": false
     }
   },
   "browserslist": [
