--- a/view/package.json
+++ b/view/package.json
@@ -16,7 +16,10 @@
     "core-js": "^3.6.5",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
+    "undercore": "^1.0.0",
+    "underscore": "^1.13.1",
     "vue": "^2.6.14",
+    "vue-bootstrap-typeahead": "^0.2.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^4.1.0"
